--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Form Validator - Библиотека валидации форм</title>
+    <title>Pamg - Библиотека валидации форм</title>
     <link rel="stylesheet" href="/src/style.css">
   </head>
   <body>
     <main>
       <h1>Библиотека валидации форм</h1>
-      <p>Пример использования библиотеки Form Validator (fv)</p>
+      <p>Пример использования библиотеки Pamg </p>
       
       <section>
         <form novalidate>
